# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.8.9_pre31 (21 Mar 2002)

  21 Mar 2002; Grant Goodyear <g2boojum@gentoo.org> portage.py: 
  Added a drobbins patch to at line 469.  Should fix emerge rsync
  problem when /etc/make.profile doesn't exist.

*portage-1.8.9_pre30 (20 Mar 2002)

  20 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: emerge
  --emptytree now works again and I added a new --nodeps option to emerge as
  well.

*portage-1.8.9_pre29 (20 Mar 2002)

  20 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: CONTENTS files
  now record the correct path when ROOT!="/".

*portage-1.8.9_pre28 (20 Mar 2002)

  20 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: an
  /etc/make.profile dir is now optional and portage will work if it's missing
  or is a broken symlink.
  
  20 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fix load()
  method in packagetree() class.

*portage-1.8.9_pre27 (19 Mar 2002)

  19 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py:
  /etc/make.profile/packages wasn't correctly masking core system packages;
  fixed.

*portage-1.8.9_pre26 (18 Mar 2002)

  18 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: configuration
  settings don't get loaded from ${ROOT}/etc anymore, just /etc.  This
  simplifies the creation of a new build image.
  
  18 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: Don't expect a
  digest file if SRC_URI is set to "" or undefined.

  18 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: RDEPEND was getting set
  to DEPEND even if there was an RDEPEND="" in the ebuild.  This has now been
  fixed and RDEPEND will only get to DEPEND if RDEPEND has unset (not "unset
  or null", as it was before this fix.)
  
  18 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: circular